Created HTML Semantic Structure
For this problem, I needed to create an HTML layout.

I made sure that it was semantically solid to my best ability.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+  <header>
+    <p id="logo"><a href="#">Header Logo</a></p>
+    <nav>
+      <ul>
+        <li><a href="#">header link one</a></li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
+      </ul>
+    </nav>
+    <div></div>
+  </header>
+  <main>
+    <div></div>
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+    <aside></aside>
+    <section></section>
+  </main>
+  <footer id="callToAction"></footer>
 </body>
 </html>
