--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
         <li><a href="#">header link three</a></li>
       </ul>
     </nav>
-    <div></div>
   </header>
+  <!-- Note: Deleted the div that was supposed to contain the h1 from the header. After referencing the layout I was given, I concluded that it would more appropriately be part of the body; more notes below. -->
   <main>
-    <div></div>
+    <section class="introduction">
+      <h1>This website is awesome</h1>
+      <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+      <button type="submit">Sign Up</button>
+    </section>
     <section></section>
     <section></section>
     <section></section>
