More Semantic Modifications to the HTML Structure
Upon further inspection, there were several issues with the current HTML structure.

These included an id attribute that was mistakingly put in the footer tag, as well as a section tag structure that was not conducive to the design.

To solve this, the document was reformatted. Additonally, an Image tag placeholder was put after the submit button near the top of the page.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <h1>This website is awesome</h1>
       <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
       <button type="submit">Sign Up</button>
+      <p class="placeholder">this is a placeholder for an image</p>
     </section>
     <section></section>
     <section></section>
-    <section></section>
-    <section></section>
-    <aside></aside>
-    <section></section>
+    <section id="callToAction"></section>
+    <!-- Note: during the early stages of the semantic structure of the document there were more sections and even an aside. This was modified based on further inspection of the example document that I am trying to replicate. -->
   </main>
-  <footer id="callToAction"></footer>
+  <footer></footer>
+  <!-- Note: the element with the id set to "callToAction" was originally the footer, however this was incorrect and has since been changed. -->
 </body>
 </html>
