Two more sections completed
Two more sections worth of HTML syntax and website copy are completed with this commit.

The divs currently referenced to as "div_placeholder" are placeholders for images and/or illustrations.

--- a/index.html
+++ b/index.html
@@ -25,8 +25,21 @@
       <button type="submit">Sign Up</button>
       <p class="placeholder">this is a placeholder for an image</p>
     </section>
-    <section></section>
-    <section></section>
+    <section>
+      <h2>Some random information.</h2>
+      <div class="div_placeholder"></div>
+      <p>this is some subtext under an illustration or image</p>
+      <div class="div_placeholder"></div>
+      <p>this is some subtext under an illustration or image</p>
+      <div class="div_placeholder"></div>
+      <p>this is some subtext under an illustration or image</p>
+      <div class="div_placeholder"></div>
+      <p>this is some subtext under an illustration or image</p>
+    </section>
+    <section>
+      <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+      <p id="attribution">-Thor, God of Thunder</p>
+    </section>
     <section id="callToAction"></section>
     <!-- Note: during the early stages of the semantic structure of the document there were more sections and even an aside. This was modified based on further inspection of the example document that I am trying to replicate. -->
   </main>
