--- a/index.html
+++ b/index.html
@@ -40,10 +40,14 @@
       <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
       <p id="attribution">-Thor, God of Thunder</p>
     </section>
-    <section id="callToAction"></section>
+    <section id="callToAction">
+      <h3>Call to action! It's time!</h3>
+      <p>Sign up for our product by clicking that button right over there!</p>
+      <button type="submit">Sign up</button>
+    </section>
     <!-- Note: during the early stages of the semantic structure of the document there were more sections and even an aside. This was modified based on further inspection of the example document that I am trying to replicate. -->
   </main>
-  <footer></footer>
+  <footer>Copyright &#169 The Odin Project 2021 </footer>
   <!-- Note: the element with the id set to "callToAction" was originally the footer, however this was incorrect and has since been changed. -->
 </body>
 </html>
