--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
       <button type="submit">Sign Up</button>
       <p class="placeholder">this is a placeholder for an image</p>
-    </section class="gallery">
-    <section>
+    </section>
+    <section class="gallery">
       <h2>Some random information.</h2>
       <div class="div_placeholder"></div>
       <p>this is some subtext under an illustration or image</p>
@@ -37,7 +37,7 @@
       <div class="div_placeholder"></div>
       <p>this is some subtext under an illustration or image</p>
     </section>
-    <section class="">
+    <section class="quote">
       <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
       <p id="attribution">-Thor, God of Thunder</p>
     </section>
