--- a/index.html
+++ b/index.html
@@ -22,37 +22,36 @@
     </div>
   </header>
   <!-- Note: Deleted the div that was supposed to contain the h1 from the header. After referencing the layout I was given, I concluded that it would more appropriately be part of the body; more notes below. -->
-  <main>
-    <div id="main_container">
-      <section class="introduction">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button type="submit">Sign Up</button>
+    <section class="introduction">
+      <div class="container">
+        <div class="hero_div">
+          <h1>This website is awesome</h1>
+          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+          <button type="submit">Sign Up</button>
+        </div>
         <p class="placeholder">this is a placeholder for an image</p>
-      </section>
-      <section class="gallery">
-        <h2>Some random information.</h2>
-        <div class="div_placeholder"></div>
-        <p>this is some subtext under an illustration or image</p>
-        <div class="div_placeholder"></div>
-        <p>this is some subtext under an illustration or image</p>
-        <div class="div_placeholder"></div>
-        <p>this is some subtext under an illustration or image</p>
-        <div class="div_placeholder"></div>
-        <p>this is some subtext under an illustration or image</p>
-      </section>
-      <section class="quote">
-        <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
-        <p id="attribution">-Thor, God of Thunder</p>
-      </section>
-      <section id="callToAction">
-        <h3>Call to action! It's time!</h3>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button type="submit">Sign up</button>
-      </section>
+    </section>
+    <section class="gallery">
+      <h2>Some random information.</h2>
+      <div class="div_placeholder"></div>
+      <p>this is some subtext under an illustration or image</p>
+      <div class="div_placeholder"></div>
+      <p>this is some subtext under an illustration or image</p>
+      <div class="div_placeholder"></div>
+      <p>this is some subtext under an illustration or image</p>
+      <div class="div_placeholder"></div>
+      <p>this is some subtext under an illustration or image</p>
+    </section>
+    <section class="quote">
+      <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+      <p id="attribution">-Thor, God of Thunder</p>
+    </section>
+    <section id="callToAction">
+      <h3>Call to action! It's time!</h3>
+      <p>Sign up for our product by clicking that button right over there!</p>
+      <button type="submit">Sign up</button>
+    </section>
       <!-- Note: during the early stages of the semantic structure of the document there were more sections and even an aside. This was modified based on further inspection of the example document that I am trying to replicate. -->
-    </div>
-  </main>
   <footer>Copyright &#169 The Odin Project 2021 </footer>
   <!-- Note: the element with the id set to "callToAction" was originally the footer, however this was incorrect and has since been changed. -->
 </body>
