--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
       <p>this is some subtext under an illustration or image</p>
     </section>
     <section class="quote">
-      <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
-      <p id="attribution">-Thor, God of Thunder</p>
+      <div class="vertical-container">
+        <blockquote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</blockquote>
+        <p id="attribution">-Thor, God of Thunder</p>
+      </div>
     </section>
     <section id="callToAction">
       <h3>Call to action! It's time!</h3>
