Added a Container div to the footer
As documented in earlier commits, there was a problem with matching the mockup to the actual document.

This was because the text was at ~80% width but the background colors filled the screen in the mockup.

I decided to simulate this by by adding containers, here especially to the footer.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
       <button type="submit">Sign up</button>
     </section>
       <!-- Note: during the early stages of the semantic structure of the document there were more sections and even an aside. This was modified based on further inspection of the example document that I am trying to replicate. -->
-  <footer>Copyright &#169 The Odin Project 2021 </footer>
+  <footer>
+    <div class="container">
+      <p>Copyright &#169 The Odin Project 2021</p>
+    </div>
+   </footer>
   <!-- Note: the element with the id set to "callToAction" was originally the footer, however this was incorrect and has since been changed. -->
 </body>
 </html>
