--- a/index.html
+++ b/index.html
@@ -32,15 +32,25 @@
         <p class="placeholder">this is a placeholder for an image</p>
     </section>
     <section class="gallery">
-      <h2>Some random information.</h2>
-      <div class="div_placeholder"></div>
-      <p>this is some subtext under an illustration or image</p>
-      <div class="div_placeholder"></div>
-      <p>this is some subtext under an illustration or image</p>
-      <div class="div_placeholder"></div>
-      <p>this is some subtext under an illustration or image</p>
-      <div class="div_placeholder"></div>
-      <p>this is some subtext under an illustration or image</p>
+      <div class="container">
+        <h2>Some random information.</h2>
+        <div class="gallery-img">
+          <div class="div_placeholder"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="gallery-img"></div>
+          <div class="div_placeholder"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="gallery-img"></div>
+          <div class="div_placeholder"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="gallery-img"></div>
+          <div class="div_placeholder"></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+     </div>
     </section>
     <section class="quote">
       <div class="vertical-container">
