--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
           <button type="submit">Sign Up</button>
         </div>
-        <p class="placeholder">this is a placeholder for an image</p>
+        <div class="placeholder"><p>this is a placeholder for an image</p></div>
     </section>
     <section class="gallery">
       <div class="container">
