Applied formatting styles to the gallery section
Rearranged the HTML div containers and started styling the css for the website gallery.

A problem arose while completing this step. There is something messing up the format with each .gallery-img and the section in general.

Will have to research and address this in later commits.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
     <section class="gallery">
       <h2>Some random information.</h2>
-      <div class="container">
+      <div class="gallery-container">
         <div class="gallery-img">
           <div class="div_placeholder"></div>
           <p>this is some subtext under an illustration or image</p>
