--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
         <p id="attribution">-Thor, God of Thunder</p>
       </div>
     </section>
-    <section id="callToAction">
-      <h3>Call to action! It's time!</h3>
-      <p>Sign up for our product by clicking that button right over there!</p>
-      <button type="submit">Sign up</button>
+    <section id="callToAction" class="cta">
+     <div class="container cta-container">
+        <div class="vertical-container">
+          <h3>Call to action! It's time!</h3>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button type="submit" class="cta-button">Sign up</button>
+      </div>
     </section>
       <!-- Note: during the early stages of the semantic structure of the document there were more sections and even an aside. This was modified based on further inspection of the example document that I am trying to replicate. -->
   <footer>
