Finished styling section.callToAction
Finished applying essential styilings that gave the h3 a bold font-weight, the container a border radius as well as extra padding on the top and bottom.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
     <section id="callToAction" class="cta">
      <div class="container cta-container">
-        <div class="vertical-container">
+        <div class="vertical-container cta-container-2">
           <h3>Call to action! It's time!</h3>
           <p>Sign up for our product by clicking that button right over there!</p>
         </div>
