--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
           <div class="div_placeholder"></div>
           <p>this is some subtext under an illustration or image</p>
         </div>
-        <div class="gallery-img"></div>
+        <div class="gallery-img">
           <div class="div_placeholder"></div>
           <p>this is some subtext under an illustration or image</p>
         </div>
-        <div class="gallery-img"></div>
+        <div class="gallery-img">
           <div class="div_placeholder"></div>
           <p>this is some subtext under an illustration or image</p>
         </div>
-        <div class="gallery-img"></div>
+        <div class="gallery-img">
           <div class="div_placeholder"></div>
           <p>this is some subtext under an illustration or image</p>
         </div>
+      </div>
      </div>
     </section>
     <section class="quote">
