--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="container container-header">
       <p id="logo"><a href="#">Header Logo</a></p>
       <nav>
         <ul>
